--- a/Aboutme.html
+++ b/Aboutme.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-Br">
+
 <head>
-	<meta charset="utf-8">
-	<link rel="stylesheet"  href="estilo.css">
-	<title>apresentacao individual</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="estilo.css">
+    <title>aboutme.html</title>
 </head>
+
 <body>
-	<header id="cabecalho">
-		<nav id="menu">
-			<ul>
-				<li><a href="principal.html">principal</a></li>
-				<li>serviços</li>
-				<li><a href="aboutme.html">sou eu</a></li>
-				<li><a href="https://github.com/marciol12 target">portfolio</a></li>
-				<li>clientes</li>
-				<li><a href="formulario.html">entre em contato</a></li>
-			</ul>
-		</nav>
-	</header>
-	<img  id="ft" src="img.jpg.jpg">
-	<section id="brs">
-		<h2>Eu sou Marcio </h2>
-		<p>Aluno unigranrio de rede de computadores</p>
-		<p id="ml"><a href="https://github.com/marciol12" target="_blanck">Portfloio</a></p>
-</section>
-	
+    <header id="cabecalho.">
+        <nav id="menu">
+            <ul>
+                <li><a href="principal.html">inicio</a></li>
+                <li>serviços</li>
+                <li><a href="aboutme.html">sou eu</a></li>
+                <li><a href="https://github.com/marciol12 target">portfolio</a></li>
+                <li>clientes</li>
+                <li><a href="formulario.html">entre em contato</a></li>
+            </ul>
+        </nav>
+        <section id="present">
+            <h1>About me</h1>
+           <p>Sou o Márcio, e por enquanto estou parado, estou na faculdade de rede de computadores, <br> área que gosto. gostaria muito de por em prática essa profissão.<br/></p>
+          <p>È uma vontade que tinha a muito tempo , e hoje estou cumprindo.</p>
+        </section>
+        <section id="id">
+          <p>E espero estar formado em breve , <br>é claro como muito estudo.<br/> </p>
+        </section>
+        <center><img  id="im" src="img.jpg.jpg"></center>
+    </header>
 </body>
+
 </html>
