--- a/principal.html
+++ b/principal.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-Br">
+
 <head>
-	<meta charset="utf-8">
-	<link rel="stylesheet"  href="estilo.css">
-	<title>apresentacao</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="estilo.css">
+    <title>apresentacao</title>
 </head>
+
 <body>
-	<header id="cabecalho">
-		<nav id="menu">
-			<ul>
-				<li><a href="principal.html">principal</a></li>
-				<li>serviços</li>
-				<li><a href="aboutme.html">sou eu</a></li>
-				<li><a href="https://github.com/marciol12 target">portfolio</a></li>
-				<li>clientes</li>
-				<li><a href="formulario.html">entre em contato</a></li>
-			</ul>
-		</nav>
-	</header>
-	<img  id="ft" src="img.jpg.jpg">
-	<section id="brs">
-		<h2>Eu sou Marcio </h2>
-		<p>Aluno unigranrio de rede de computadores</p>
-		<p id="ml"><a href="https://github.com/marciol12" target="_blanck">Portfloio</a></p>
-</section>
-	
+    <header id="cabecalho">
+        <nav id="menu">
+            <ul>
+                <li><a href="principal.html">inicio</a></li>
+                <li><a href="#">serviços</a></li>
+                <li><a href="Aboutme.html">sou eu</a></li>
+                <li><a href="https://github.com/marciol12 target">portfolio</a></li>
+                <li><a href="#">clientes</a></li>
+                <li><a href="formulario.html">entre em contato</a></li>
+            </ul>
+        </nav>
+        <section id="presentation">
+            <h1> Oi eu sou , Márcio Lima</h1>
+            <span>Aluno Unigranrio de Rede de Computadores</span>
+        </section>
+    </header>
+    <!-- <img id="ft" src="img.jpg.jpg"> -->
+
 </body>
+
 </html>
